# th-client

./: .gitignore  pyproject.toml
examples/: login.py
hunterclassic/: __init__.py  client.py  session.py
hunterclassic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hunterclassic/models/: achievement.py  achievements.py  ammunition.py  animal.py  base.py  expedition.py  expedition_list.py  loadout.py  reserve.py  skills.py  user.py  weapon.py
hunterclassic/resources/: base.py  expeditions.py  users.py
tools/: common.py  extract_animals.py  extract_weapons.py
