[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hunterclassic"
version = "0.1.0"
description = "Unofficial Python SDK for TheHunter Classic"
requires-python = ">=3.12"

dependencies = [
    "requests",
    "pydantic",
]

[tool.setuptools.packages.find]
include = ["hunterclassic*"]